--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <modules>
         <module>eureka-server</module>
         <module>gateway</module>
+        <module>auth-service</module>
     </modules>
 
     <dependencyManagement>
@@ -62,6 +63,10 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency> -->
+        <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
