'getme' feito, cadastro no keycloak + cadastro no microsserviço de usuário feito

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -50,6 +50,11 @@ spring:
           predicates:
             - Path=/auth/**
 
+        - id: user-service
+          uri: lb://user-service
+          predicates:
+            - Path=/user/**
+
         - id: openapi
           uri: http://localhost:${server.port}
           predicates:
