--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>eureka-server</module>
         <module>gateway</module>
         <module>auth-service</module>
+        <module>user-service</module>
     </modules>
 
     <dependencyManagement>
