Ajustado yml para tracing e actuator.

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -18,7 +18,15 @@ logging:
     root: INFO
 
 management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
   tracing:
+    enabled: true
     sampling:
       probability: 1.0
   zipkin:
