--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>br.com.linkagrotech</groupId>
 		<artifactId>link-backend-app</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 	<artifactId>gateway</artifactId>
 	<name>gateway</name>
