--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -31,9 +31,8 @@ management:
       probability: 1.0
   zipkin:
     tracing:
-      endpoint: http://localhost:9411/api/v2/spans
+      endpoint: ${SPRING_ZIPKIN_BASE_URL:http://localhost:9411/api/v2/spans}
 
----
 spring:
   application:
     name: gateway
@@ -46,12 +45,12 @@ spring:
         - id: eureka-server
           predicates:
             - Path=/eureka/web
-          uri: http://localhost:5762
+          uri: ${EUREKA_CLIENT_SERVICEURL_HOST:http://localhost:5762}
 
         - id: eureka-server-static
           predicates:
             - Path=/eureka/**
-          uri: http://localhost:5762
+          uri: ${EUREKA_CLIENT_SERVICEURL_HOST:http://localhost:5762}
 
         - id: auth-service
           uri: lb://auth-service
@@ -76,14 +75,6 @@ spring:
         jwt:
           issuer-uri: http://localhost:8081/realms/agrobrasil
           jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
-
-management:
-  tracing:
-    sampling:
-      probability: 1.0
-  zipkin:
-    tracing:
-      endpoint: http://localhost:9411/api/v2/spans
 
 springdoc:
   swagger-ui:
