Gateway não se conecta ao keycloak por dentro do docker.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - eureka-server
     environment:
       <<: *shared-env
+      KEYCLOAK_ISSUER: http://keycloak:8081/realms/agrobrasil
 
   auth-service:
     image: auth-service:latest
