Adjusting Gateway Docker Compose with Keycloak.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,17 @@
       "mainClass": "br.com.linkagrotech.auth_service.AuthServiceApplication",
       "projectName": "auth-service",
       "args": "",
+      "envFile": "${workspaceFolder}/.env",
+      "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=50513 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=auth-service"
+    },
+    {
+      "type": "java",
+      "name": "Spring Boot-UserServiceApplication<user-service>",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "mainClass": "br.com.linkagrotech.userservice.UserServiceApplication",
+      "projectName": "user-service",
+      "args": "",
       "envFile": "${workspaceFolder}/.env"
     }
   ]
