--- a/visita-service/src/main/resources/application.yml
+++ b/visita-service/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
 
 server:
   port: 5803
+  forward-headers-strategy: framework
   servlet:
     context-path: /visita
 
@@ -44,4 +45,8 @@ management:
     tracing:
       endpoint: ${SPRING_ZIPKIN_BASE_URL:http://localhost:9411/api/v2/spans}
 
-
+springdoc:
+  api-docs:
+    version: OPENAPI_3_1
+  cache:
+    disabled: true
