--- a/auth-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/auth-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,10 @@
     "name": "link-gateway-oauth.clientId",
     "type": "java.lang.String",
     "description": "A description for 'link-gateway-oauth.clientId'"
+  },
+  {
+    "name": "link-gateway-oauth.keyloack-host",
+    "type": "java.lang.String",
+    "description": "A description for 'link-gateway-oauth.keyloack-host'"
   }
 ]}
