--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 
 
 link-gateway-oauth:
-  issuer-uri: http://localhost:8081/realms/agrobrasil
+  issuer-uri: ${KEYCLOAK_ISSUER:http://localhost:8081/realms/agrobrasil}
   clientId: microservices
   clientSecret: soFh1RbL9qbWud3IHE0ox8Cxl3YZZc3K
